fix: copy buttons text overflow

--- a/css.css
+++ b/css.css
@@ -1167,6 +1167,7 @@ input[type="number"] {
   border-radius: 6px;
   padding: 6px 12px;
   gap: 10px;
+  overflow: hidden;
 }
 
 .command-box kbd {
@@ -1197,6 +1198,8 @@ input[type="number"] {
   display: flex;
   align-items: center;
   gap: 6px;
+  flex-shrink: 0;
+  min-width: 68px;
 }
 
 .copy-prem-btn:hover {
